--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "vk-mini-app",
   "version": "1.0.0",
   "description": "VK Mini App project",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=production node dist/index.js",
-    "dev": "NODE_ENV=development nodemon index.js",
-    "build": "NODE_ENV=production webpack --mode production",
-    "watch": "NODE_ENV=development webpack --mode development --watch",
-    "prestart": "npm run build",
-    "prepare": "npm run build"
+    "start": "vite preview",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "keywords": [
     "vk",
@@ -19,25 +17,15 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "vk-bridge": "^3.0.0",
-    "vue": "^2.6.14",
-    "webpack": "^5.75.0"
+    "@vkontakte/vk-bridge": "^2.15.6",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "webpack-cli": "^5.0.1",
-    "nodemon": "^2.0.22",
-    "vue-loader": "^15.10.1",
-    "vue-template-compiler": "^2.6.14"
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vue/compiler-sfc": "^3.5.13",
+    "vite": "^4.5.12"
   },
   "engines": {
-    "node": ">=14.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://rudichd.github.io/vkminiapp1/"
-  },
-  "bugs": {
-    "url": "https://rudichd.github.io/vkminiapp1/issues"
-  },
-  "homepage": "https://rudichd.github.io/vkminiapp1/#readme"
+    "node": ">=16.0.0"
+  }
 }
